# ORSPO

./: .gitignore  CMakeLists.txt  README.md  build.sh  literature.md  Список задач.docx  Список задач.xlsx
Task001/: CMakeLists.txt  README.md
Task002/: README.md  main  main.c
Task003/: README.md  config.h  main  main.c
Task004/: README.md  coMain.s  main.c  prMain
Task005/: README.md  main.c
Task006/: Makefile  README.md
Task007/: README.md  a.out  main.c
Task008/: README.md  main.c
Task009/: README.md  lib.h
Task010/: README.md  main.c
Task011/: README.md  errnocounter.c
Task012/: README.md
Task013/: CMakeLists.txt  Makefile  README.md  main.c
Task014/: CMakeLists.txt  README.md  a.out  lib.h
Task015/: README.md  a.out  errno.c  errno.out  main.out
Task015/lib/: lib.c  lib.h
Task016/: README.md
Task016/src/: calc.h  main.c
Task016/tests/: test_calc.c
Task017/: README.md
Task018/: README.md  leak.c
Task019/: AtomicOperationAndCache.cpp  MatrixMult  MatrixMult.c  README.md  cachegrind.out.254  cachegrind.out.298  cachegrind.out.4701  cachegrind.out.909
Task020/: README.md
Task021/: Makefile  README.md  a.out  main  main.c  test_runner
Task021/src/: main.c  sum.c  sum.h
Task021/test/: test_sum.c
Task022/: Makefile  README.md  definition.c
Task022/src/: main.c  resistance.c  resistance.h
Task022/test/: test_resistance.c
Task023/: README.md  precision
Task024/: Makefile  README.md  main.c  max.c  test_main.c  test_max.c
Task025/: Makefile  README.md  main.c  test_main.c
Task026/: README.md  test_main.c
Task027/: README.md  main.c  test_main.c
Task028/: README.md  test_main.c
Task029/: README.md  main.c  test_main.c
Task030/: README.md  main.c  test_main.c
Task031/: README.md  test_main.c
Task032/: README.md  main.c  test_main.c
Task033/: README.md  test_main.c
Task034/: README.md  main.c  test_main.c
Task035/: README.md  main.c  test_main.c
Task036/: README.md  main.c  test_main.c
Task037/: README.md  test_main.c
Task038/: Makefile  README.md  inline_func.c  inlinetest.c  test_main.c
Task039/: README.md  test_main.c
Task040/: README.md  test_main.c
Task041/: README.md  test_main.c
Task042/: README.md  main.c  test_main.c
Task043/: README.md  main.c  test_main.c
Task044/: README.md  main.c  test_main.c
Task045/: README.md  main.c  test_main.c
Task046/: README.md  test_main.c
Task047/: Makefile  README.md  main.c  test_main.c
Task048/: CMakeLists.txt  README.md  main.c
Task049/: CMakeLists.txt  README.md
Task050/: CMakeLists.txt  README.md
Task051/: CMakeLists.txt  README.md  arraytofunc.c  pointerVSarray.c
Task052/: CMakeLists.txt  Challenge.c  README.md  main.c  safe_printf_lib.c
Task053/: CMakeLists.txt  README.md  main.c
Task054/: CMakeLists.txt  README.md  swap.hpp  verify_swap.cpp
Task055/: CMakeLists.txt  README.md  task055.hpp  verify_task055.cpp
Task056/: CMakeLists.txt  README.md  task056.hpp  verify_task056.cpp
Task057/: README.md
Task058/: CMakeLists.txt  README.md  task058.hpp  verify_task058.cpp
Task059/: README.md  malloc_lib.c  safe_printf_lib.h
Task060/: CMakeLists.txt  README.md  task060.hpp  verify_task060.cpp
Task061/: CMakeLists.txt  README.md  task061.hpp  verify_task061.cpp
Task062/: CMakeLists.txt  README.md  task062.hpp  verify_task062.cpp
Task063/: CMakeLists.txt  README.md  task063.hpp  verify_task063.cpp
Task064/: CMakeLists.txt  README.md  task064.hpp  verify_task064.cpp
Task065/: CMakeLists.txt  README.md  task065.hpp  verify_task065.cpp
Task066/: CMakeLists.txt  README.md  task066.hpp  verify_task066.cpp
Task067/: CMakeLists.txt  README.md  task067.hpp  verify_task067.cpp
Task068/: CMakeLists.txt  README.md  task068.hpp  verify_task068.cpp
Task069/: CMakeLists.txt  README.md  task069.hpp  verify_task069.cpp
Task070/: CMakeLists.txt  README.md  task070.hpp  verify_task070.cpp
Task071/: CMakeLists.txt  README.md  main.c  task071.hpp  verify_task071.cpp
Task072/: CMakeLists.txt  README.md  task072.hpp  verify_task072.cpp
Task073/: CMakeLists.txt  README.md  task073.hpp  verify_task073.cpp
Task074/: CMakeLists.txt  README.md  task074.hpp  verify_task074.cpp
Task075/: README.md
Task076/: README.md
Task077/: README.md
Task078/: README.md  bit_fields.c
Task079/: README.md  bin_operations.c
Task080/: README.md  bin_operations.c
Task081/: README.md  bin_operations.c
Task082/: README.md  bin_operations.c
Task083/: README.md  bin_operations.c
Task084/: README.md
Task085/: README.md  work_with_files.c
Task086/: README.md
Task087/: README.md
Task088/: README.md  main.c
Task089/: Makefile  README.md
Task090/: README.md  main.s
Task091/: Makefile  README.md
Task092/: README.md
Task093/: README.md  a.out  main.s
Task094/: README.md  main.s
Task094/094_1/: Makefile  README.md  main.s
Task094/094_2/: README.md
Task094/094_3/: README.md  main  main.s
Task095/: README.md  main.s
Task095/095_1/: README.md  main.s
Task095/095_2/: README.md
Task096/: Makefile  README.md
Task096/096_1/: README.md
Task096/096_2/: README.md
Task096/096_3/: README.md  main.s
Task097/: README.md
Task098/: README.md  memory.c  test.c
Task099/: README.md  main.c  memory1.c
Task100/: README.md  make.sh
Unity/src/: unity.c
bdz/: README.md
bdz/Task001/: README.md
bdz/Task002/: README.md  lib.c  lib.h
bdz/Task003/: README.md  main.c
bdz/Task004/: README.md  config.h  main.c
bdz/Task005/: README.md  main.c
bdz/Task006/: README.md  main.c
bdz/Task007/: README.md  main.c
bdz/Task008/: .clang-format  .clang-tidy  README.md  main.c
bdz/Task009/: README.md  lib.c  main.c
bdz/Task010/: README.md  main.c
bdz/Task011/: README.md  errno.c  errnocounter.c
bdz/Task012/: Makefile  README.md
bdz/Task013/: Makefile  README.md
bdz/Task014/: CMakeLists.txt  README.md  main.c
bdz/Task015/: README.md
bdz/Task016/: Makefile  README.md
bdz/Task017/: README.md  gdb_vals.c
bdz/Task018/: README.md
example/: CMakeLists.txt  main.cpp  test.cpp  utility.hpp
(+118 files in other folders)
