cmake_minimum_required(VERSION 3.10)
project(ORSPO)

set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)

set(GTEST_DIR "${CMAKE_CURRENT_SOURCE_DIR}/lib/gtest")
set(GTEST_INCLUDE_DIR "${GTEST_DIR}/googletest/include")

add_subdirectory(${GTEST_DIR} ${CMAKE_BINARY_DIR}/gtest_build)

add_subdirectory(example)
add_subdirectory(Task001)
add_subdirectory(Task048)
add_subdirectory(Task049)
add_subdirectory(Task050)
add_subdirectory(Task051)
add_subdirectory(Task052)
add_subdirectory(Task053)
add_subdirectory(Task054)
add_subdirectory(Task055)
add_subdirectory(Task056)
add_subdirectory(Task058)
add_subdirectory(Task060)
add_subdirectory(Task061)
add_subdirectory(Task062)
add_subdirectory(Task063)
add_subdirectory(Task064)
add_subdirectory(Task065)
add_subdirectory(Task066)
add_subdirectory(Task067)
add_subdirectory(Task068)
add_subdirectory(Task069)
add_subdirectory(Task070)
add_subdirectory(Task071)
add_subdirectory(Task072)
add_subdirectory(Task073)
add_subdirectory(Task074)
enable_testing()
